# tmuy

./: Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml
docs/: automation.md  rpc-v1.md  spec.md  test-plan.md
scripts/: bump-version.sh  package-release.sh
src/: cli.rs  lib.rs  main.rs  model.rs  rpc.rs  runtime.rs  sandbox.rs  store.rs
src/runtime/: client.rs  daemon.rs  protocol.rs  server.rs  ui.rs
tests/: bump-version.sh  cli_human.rs  cli_json.rs  e2e.rs  install-script.sh  rpc.rs
