[package]
name = "tmuy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["clock", "serde"] }
clap = { version = "4.5.53", features = ["derive", "env"] }
crossterm = "0.29.0"
dirs = "6.0.0"
fs2 = "0.4.3"
nix = { version = "0.30.1", features = ["poll", "process", "signal", "term"] }
portable-pty = "0.9.0"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[dev-dependencies]
tempfile = "3.23.0"
